--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form class="" onsubmit="Check(); return false ;">
         <label for="letter"></label>
         <!-- <input type="text" id="letter" placeholder="Guess which: a, b, c, d or e?"> -->
-        <input class="in" type="text" id="letter" placeholder="type here e.g b,r,c,d">
+        <input class="in" type="text" id="letter" placeholder="type here e.g (b,r,c,d)">
         <br>
         <br>
         <button class="but" type="submit">try it</button>
